welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:2: error: method hunt overrides nothing
override def hunt() 
             ^